// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C2 — Bilingual JSON-LD snapshots > AverageBuyPrice > EN /calculators/average-buy-price emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Enter your Bitcoin purchases and see your average buy price, total BTC held, current profit/loss, and break-even price. ",
    "faqQuestions": undefined,
    "featureList": [
      "Weighted average buy price calculation",
      "Live Bitcoin price integration",
      "Multi-purchase cost basis tracking",
      "Break-even price analysis",
      "Scenario projections at $100k–$1M",
      "PDF and PNG export",
    ],
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Average Buy Price Calculator",
    "priceCurrency": "USD",
  },
  {
    "@type": "HowTo",
    "description": "Find your weighted average cost basis across multiple Bitcoin purchases.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Add Your Purchases",
      "View Average Price",
      "Check Profit/Loss",
    ],
    "inLanguage": "en",
    "name": "How to Calculate Your Average Bitcoin Buy Price",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "How do I calculate my average Bitcoin buy price?",
      "What's the difference between average cost and DCA?",
      "Does buying more Bitcoin lower my average cost?",
      "Should I include exchange fees?",
      "How many purchases can I include?",
      "What is a good average buy price for Bitcoin?",
      "How do I calculate my Bitcoin break even price?",
      "How do I know if I'm ahead of the average Bitcoin holder?",
      "I don't know my average Bitcoin purchase price — how do I find it?",
      "How do I track scattered Bitcoin purchases across exchanges?",
      "How do I figure out Bitcoin capital gains without records?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Home › Calculators › Average Buy Price",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > AverageBuyPrice > TR /tr/hesaplayicilar/bitcoin-ortalama-alis emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Bitcoin alımlarınızı girin; ortalama alış fiyatınızı, toplam elde tutulan BTC'yi, güncel kâr/zararı ve başabaş fiyatını ",
    "faqQuestions": undefined,
    "featureList": [
      "Ağırlıklı ortalama alış fiyatı hesaplaması",
      "Canlı Bitcoin fiyatı entegrasyonu",
      "Çoklu alım maliyet bazı takibi",
      "Başabaş fiyat analizi",
      "100 bin – 1 milyon $ aralığında senaryo projeksiyonları",
      "PDF ve PNG dışa aktarma",
    ],
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Ortalama Alış Fiyatı Hesaplayıcısı",
    "priceCurrency": "TRY",
  },
  {
    "@type": "HowTo",
    "description": "Birden fazla Bitcoin alımı arasında ağırlıklı ortalama maliyet bazınızı bulun.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Alımlarınızı Ekleyin",
      "Ortalama Fiyatı Görüntüleyin",
      "Kâr/Zararı Kontrol Edin",
    ],
    "inLanguage": "tr",
    "name": "Ortalama Bitcoin Alış Fiyatınızı Nasıl Hesaplarsınız",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "Ortalama Bitcoin alış fiyatımı nasıl hesaplarım?",
      "Ortalama maliyet ile DCA arasındaki fark nedir?",
      "Daha fazla Bitcoin satın almak ortalama maliyetimi düşürür mü?",
      "Borsa ücretlerini dahil etmeli miyim?",
      "Kaç alımı dahil edebilirim?",
      "Bitcoin için iyi bir ortalama alış fiyatı nedir?",
      "Bitcoin başabaş fiyatımı nasıl hesaplarım?",
      "Ortalama Bitcoin sahibinin önünde miyim, nasıl anlarım?",
      "Ortalama Bitcoin alış fiyatımı bilmiyorum, nasıl bulabilirim?",
      "Farklı borsalara dağılmış Bitcoin alımlarını nasıl takip ederim?",
      "Kayıt olmadan Bitcoin sermaye kazançlarını nasıl hesaplarım?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Ana Sayfa › Hesaplayıcılar › Ortalama Alış Fiyatı",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > CapitalGainsTax > EN /calculators/capital-gains-tax emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "See exactly what you owe on your Bitcoin profits. Covers federal and all US state rates, short- and long-term gains, and",
    "faqQuestions": undefined,
    "featureList": [
      "2026 IRS federal tax brackets",
      "All 50 US state tax rates and DC",
      "Multiple filing status support (Single, MFJ, MFS, HoH)",
      "Annual income tax bracket integration",
      "Short-term vs long-term capital gains analysis",
      "Tax optimization and harvest-loss suggestions",
      "Professional tax reports and CSV export",
      "NIIT (Net Investment Income Tax) auto-detection",
      "Wash sale detection",
      "FIFO, LIFO, HIFO cost basis methods",
      "UK HMRC capital gains tax support",
    ],
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Capital Gains Tax Calculator 2026",
    "priceCurrency": "USD",
  },
  {
    "@type": "HowTo",
    "description": "Enter each Bitcoin buy and sell to compute short- vs long-term capital gains, tax owed and remaining cost basis for your",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Configure Tax Settings",
      "Add Bitcoin Transactions",
      "Calculate Tax Liability",
      "Review Tax Optimization",
    ],
    "inLanguage": "en",
    "name": "How to Calculate Bitcoin Capital Gains Tax for 2026",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "How are Bitcoin capital gains taxed in 2025?",
      "What filing status and income do I need?",
      "Does this calculator include state taxes?",
      "What is the Net Investment Income Tax (NIIT)?",
      "How accurate are these tax calculations?",
      "Is this Bitcoin tax calculator free?",
      "How much tax do I pay on Bitcoin profits?",
      "How much is Bitcoin capital gains tax in the UK?",
      "Do I owe tax on Bitcoin if I haven't sold?",
      "Which states have no Bitcoin capital gains tax?",
      "How do I calculate Bitcoin losses for a tax write-off?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Home › Calculators › Capital Gains Tax",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > CapitalGainsTax > TR /tr/hesaplayicilar/bitcoin-vergi-hesaplayicisi emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Bitcoin kârınıza uygulanacak vergiyi tam olarak hesaplayın. Federal ve eyalet oranları, kısa ve uzun vadeli kazançlar, t",
    "faqQuestions": undefined,
    "featureList": [
      "2026 IRS federal tax brackets",
      "All 50 US state tax rates and DC",
      "Multiple filing status support (Single, MFJ, MFS, HoH)",
      "Annual income tax bracket integration",
      "Short-term vs long-term capital gains analysis",
      "Tax optimization and harvest-loss suggestions",
      "Professional tax reports and CSV export",
      "NIIT (Net Investment Income Tax) auto-detection",
      "Wash sale detection",
      "FIFO, LIFO, HIFO cost basis methods",
      "UK HMRC capital gains tax support",
    ],
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Sermaye Kazancı Vergi Hesaplayıcısı 2026",
    "priceCurrency": "TRY",
  },
  {
    "@type": "HowTo",
    "description": "Bitcoin sermaye kazancı vergi yükümlülüklerinizi profesyonel doğrulukla hesaplamak için adım adım rehber",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Vergi Ayarlarını Yapılandırın",
      "Bitcoin İşlemlerini Ekleyin",
      "Vergi Yükümlülüğünü Hesaplayın",
      "Vergi Optimizasyonunu İnceleyin",
    ],
    "inLanguage": "tr",
    "name": "2026 için Bitcoin Sermaye Kazancı Vergisi Nasıl Hesaplanır",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "Türkiye'de Bitcoin kâzanç vergisi nasıl hesaplanır?",
      "2025'te Bitcoin sermaye kazançları nasıl vergilendirilir?",
      "Hangi beyan durumu ve gelir bilgisine ihtiyacım var?",
      "Bu hesaplayıcı eyalet vergilerini içeriyor mu?",
      "Net Yatırım Gelir Vergisi (NIIT) nedir?",
      "Bu vergi hesaplamaları ne kadar doğrudur?",
      "Bu Bitcoin vergi hesaplayıcısı ücretsiz mi?",
      "Bitcoin satmadıysam vergi öder miyim?",
      "İngiltere'de Bitcoin sermaye kazancı vergisi ne kadar?",
      "Hangi eyaletlerde Bitcoin sermaye kazancı vergisi yoktur?",
      "Vergi indirimi için Bitcoin zararını nasıl hesaplarım?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Ana Sayfa › Hesaplayıcılar › Sermaye Kazancı Vergi Hesaplayıcısı",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > HalvingCountdown > EN /calculators/halving-countdown emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Live countdown to the 2028 Bitcoin halving, block by block. See price history from past halvings and what the models pre",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Halving Countdown 2028",
    "priceCurrency": "USD",
  },
  {
    "@type": "HowTo",
    "description": "Use the Bitcoin Halving Countdown to monitor blocks remaining and estimated date.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "View the Countdown",
      "Explore Halving History",
      "Understand the Impact",
    ],
    "inLanguage": "en",
    "name": "How to Track the Next Bitcoin Halving",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "When is the next Bitcoin halving?",
      "What is a Bitcoin halving?",
      "What happens to Bitcoin's price after a halving?",
      "How many Bitcoin halvings have there been?",
      "What is the current Bitcoin block reward?",
      "How many Bitcoin are left to mine?",
      "Why does Bitcoin halving affect the price?",
      "When will the last Bitcoin be mined?",
      "How many days until the next Bitcoin halving?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "Event",
    "description": "The fifth Bitcoin halving reduces the block subsidy from 3.125 BTC to 1.5625 BTC at block height 1,050,000, estimated Ap",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Halving #5 (Block 1,050,000)",
    "priceCurrency": null,
  },
  {
    "@type": "DefinedTermSet",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Halving Glossary",
    "priceCurrency": null,
  },
  {
    "@type": "WebPage",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Home › Calculators › Halving Countdown",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > HalvingCountdown > TR /tr/hesaplayicilar/bitcoin-yarilama emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "2028 Bitcoin yarılamasına blok blok canlı geri sayım. Geçmiş yarılamaların fiyat tarihi ve modellerin bir sonraki döngü ",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Yarılama Geri Sayımı 2028",
    "priceCurrency": "TRY",
  },
  {
    "@type": "HowTo",
    "description": "Kalan blokları ve tahmini tarihi izlemek için Bitcoin Yarılama Geri Sayımı'nı kullanın.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Geri Sayımı Görüntüleyin",
      "Yarılama Tarihçesini Keşfedin",
      "Etkiyi Anlayın",
    ],
    "inLanguage": "tr",
    "name": "Bir Sonraki Bitcoin Yarılamasını Nasıl Takip Edersiniz",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "Bir sonraki Bitcoin yarılaması ne zaman?",
      "Bitcoin yarılaması nedir?",
      "Yarılamadan sonra Bitcoin fiyatına ne olur?",
      "Şimdiye kadar kaç Bitcoin yarılaması oldu?",
      "Mevcut Bitcoin blok ödülü nedir?",
      "Kaç Bitcoin'in madenlenmesi kaldı?",
      "Yarılama Bitcoin fiyatını neden etkiler?",
      "Son Bitcoin ne zaman madenlenecek?",
      "Bir sonraki Bitcoin yarılanmasına kaç gün kaldı?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "Event",
    "description": "Beşinci Bitcoin yarılanması, 1.050.000 blok yüksekliğinde blok ödülünü 3,125 BTC'den 1,5625 BTC'ye düşürür; Nisan 2028 t",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Yarılanma #5 (Blok 1.050.000)",
    "priceCurrency": null,
  },
  {
    "@type": "DefinedTermSet",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Yarılanma Sözlüğü",
    "priceCurrency": null,
  },
  {
    "@type": "WebPage",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Ana Sayfa › Hesaplayıcılar › Bitcoin Yarılama Geri Sayımı",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > LumpSumVsDCA > EN /calculators/lump-sum-vs-dca emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Compare Bitcoin lump sum vs dollar cost averaging strategies with our free calculator. See which approach delivers bette",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Lump Sum vs DCA Calculator",
    "priceCurrency": "USD",
  },
  {
    "@type": "HowTo",
    "description": "Use this calculator to compare lump sum and dollar cost averaging strategies for Bitcoin.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Set Your Investment Amount",
      "Choose Your Time Period",
      "Configure DCA Frequency",
      "Compare Results",
    ],
    "inLanguage": "en",
    "name": "How to Compare Lump Sum vs DCA Bitcoin Investing",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "What's the difference between lump sum and DCA investing?",
      "Which strategy is better for Bitcoin?",
      "How does market volatility affect each strategy?",
      "What if I don't have a lump sum available?",
      "How accurate are historical comparisons?",
      "What about transaction fees?",
      "What's the best DCA frequency?",
      "How often does lump sum beat DCA in Bitcoin's history?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "ItemList",
    "description": "Three investment strategies backtested against real Bitcoin price history.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Investment Strategies Compared",
    "priceCurrency": null,
  },
  {
    "@type": "SoftwareApplication",
    "description": null,
    "faqQuestions": undefined,
    "featureList": [
      "Backtest lump-sum, DCA, and DVA strategies against real Bitcoin price data",
      "Configure investment amount, currency, frequency, and date range",
      "Side-by-side ROI, total value, and BTC accumulated comparisons",
      "Risk analysis with volatility, drawdown, and Sharpe-style metrics",
      "Downloadable PDF report and print-friendly view",
    ],
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Lump Sum vs DCA Calculator",
    "priceCurrency": "USD",
  },
  {
    "@type": "Dataset",
    "description": "Side-by-side dataset comparing lump-sum and dollar-cost-averaging entry strategies into Bitcoin across every historical ",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Lump Sum vs DCA Bitcoin Dataset",
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Home › Calculators › Lump Sum vs DCA",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > LumpSumVsDCA > TR /tr/hesaplayicilar/bitcoin-maliyet-ortalama emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Bitcoin toplu yatırım ile dolar maliyet ortalaması (DCA) stratejilerini ücretsiz hesaplayıcımızla karşılaştırın. Hangi y",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Toplu Tutar vs DCA Hesaplayıcısı",
    "priceCurrency": "TRY",
  },
  {
    "@type": "HowTo",
    "description": "Bu hesaplayıcıyı kullanarak Bitcoin için toplu yatırım ve dolar maliyet ortalaması stratejilerini karşılaştırın.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Yatırım Tutarını Belirleyin",
      "Zaman Dilimi Seçin",
      "DCA Sıklığını Ayarlayın",
      "Sonuçları Karşılaştırın",
    ],
    "inLanguage": "tr",
    "name": "Bitcoin'de Toplu Tutar vs DCA Nasıl Karşılaştırılır",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "Toplu tutar ile DCA yatırımı arasındaki fark nedir?",
      "Bitcoin için hangi strateji daha iyidir?",
      "Piyasa oynaklığı her stratejiyi nasıl etkiler?",
      "Elimde toplu tutar yoksa ne olur?",
      "Tarihsel karşılaştırmalar ne kadar doğrudur?",
      "İşlem ücretleri ne olacak?",
      "En iyi DCA sıklığı nedir?",
      "Bitcoin tarihinde toplu tutar DCA'yı ne sıklıkta geçer?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "ItemList",
    "description": "Gerçek Bitcoin fiyat geçmişine karşı geriye dönük test edilen üç yatırım stratejisi.",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Karşılaştırılan Bitcoin Yatırım Stratejileri",
    "priceCurrency": null,
  },
  {
    "@type": "SoftwareApplication",
    "description": null,
    "faqQuestions": undefined,
    "featureList": [
      "Toplu yatırım, DCA ve DVA stratejilerini gerçek Bitcoin fiyat verileriyle test edin",
      "Yatırım tutarı, para birimi, sıklık ve tarih aralığı ayarlayın",
      "Yan yana ROI, toplam değer ve biriken BTC karşılaştırmaları",
      "Oynaklık, düşüş ve Sharpe tarzı risk metrikleri",
      "İndirilebilir PDF raporu ve yazdırıcı dostu görünüm",
    ],
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Toplu Tutar vs DCA Hesaplayıcısı",
    "priceCurrency": "TRY",
  },
  {
    "@type": "Dataset",
    "description": "Side-by-side dataset comparing lump-sum and dollar-cost-averaging entry strategies into Bitcoin across every historical ",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Lump Sum vs DCA Bitcoin Dataset",
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Ana Sayfa › Hesaplayıcılar › Toplu Tutar vs DCA",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > PowerLaw > EN /calculators/power-law emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Free Bitcoin Power Law calculator. Project future BTC prices using Santostasi's regression model with support, fair valu",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": "Bitcoin Power Law Calculator",
    "priceCurrency": "USD",
  },
  {
    "@type": "HowTo",
    "description": "Step-by-step guide to project Bitcoin prices using the Power Law model",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Select a Target Date",
      "View Projected Price Range",
      "Check Current Deviation",
      "Export Your Report",
    ],
    "inLanguage": "en",
    "name": "How to Use the Bitcoin Power Law Calculator",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "What is the Bitcoin Power Law?",
      "Who created the Power Law model?",
      "How accurate is the Power Law model?",
      "What are the support and resistance bands?",
      "What are the limitations of the Power Law?",
      "What is the Power Law floor price?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "en",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Home › Calculators › Power Law Calculator",
    "priceCurrency": null,
  },
]
`;

exports[`C2 — Bilingual JSON-LD snapshots > PowerLaw > TR /tr/hesaplayicilar/bitcoin-guc-yasasi emits stable JSON-LD blocks 1`] = `
[
  {
    "@type": "WebApplication",
    "description": "Ücretsiz Bitcoin Güç Yasası hesaplayıcısı. Santostasi'nin regresyon modeliyle destek, gerçek değer ve direnç bantlarını ",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": "Bitcoin Güç Yasası Hesaplayıcısı",
    "priceCurrency": "TRY",
  },
  {
    "@type": "HowTo",
    "description": "Güç Yasası modelini kullanarak Bitcoin fiyatlarını öngörmek için adım adım rehber",
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": [
      "Hedef Tarih Seçin",
      "Öngörülen Fiyat Aralığını Görüntüleyin",
      "Mevcut Sapmayı Kontrol Edin",
      "Raporunuzu Dışa Aktarın",
    ],
    "inLanguage": "tr",
    "name": "Bitcoin Güç Yasası Hesaplayıcısı Nasıl Kullanılır",
    "priceCurrency": null,
  },
  {
    "@type": "FAQPage",
    "description": null,
    "faqQuestions": [
      "Bitcoin Güç Yasası nedir?",
      "Güç Yasası modelini kim oluşturdu?",
      "Güç Yasası modeli ne kadar doğrudur?",
      "Destek ve direnç bantları nelerdir?",
      "Güç Yasası'nın sınırlamaları nelerdir?",
      "Güç Yasası taban fiyatı nedir?",
    ],
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": "tr",
    "name": null,
    "priceCurrency": null,
  },
  {
    "@type": "BreadcrumbList",
    "description": null,
    "faqQuestions": undefined,
    "featureList": undefined,
    "howToSteps": undefined,
    "inLanguage": null,
    "name": "Ana Sayfa › Hesaplayıcılar › Güç Yasası Hesaplayıcısı",
    "priceCurrency": null,
  },
]
`;
